--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "kdyby/translation": "^3.0",
     "nette/neon": "^3.0",
     "nette/di": "^3.0",
-    "wavevision/utils": "^1.2"
+    "wavevision/utils": "^1.2",
+    "symfony/console": "^4.3"
   },
   "require-dev": {
     "wavevision/coding-standard": "^1.1",
