--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "phpstan/phpstan": "^0.11.16",
     "phing/phing": "^2.16",
     "jakub-onderka/php-parallel-lint": "^1.0",
-    "php-coveralls/php-coveralls": "^2.1"
+    "php-coveralls/php-coveralls": "^2.1",
+    "nette/application": "^3.0"
   },
   "scripts": {
     "phing": "phing"
