--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "phing/phing": "^2.16",
     "jakub-onderka/php-parallel-lint": "^1.0",
     "php-coveralls/php-coveralls": "^2.1",
-    "nette/application": "^3.0"
+    "nette/application": "^3.0",
+    "wavevision/nette-tests": "^1.0"
   },
   "scripts": {
     "phing": "phing"
