--- a/tests/NamespaceTranslatorTests/App/config.neon
+++ b/tests/NamespaceTranslatorTests/App/config.neon
@@ -24,5 +24,5 @@ namespaceTranslator:
 
 services:
     router: Wavevision\NamespaceTranslatorTests\App\Router\RouterFactory::createRouter
+    - Wavevision\NamespaceTranslatorTests\App\Components\OtherComponent\OtherComponentFactory
     - Wavevision\NamespaceTranslatorTests\App\Components\SomeComponent\SomeComponentFactory
-
