Provide translator variable to templates

--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
     <target name="rm-cache">
         <exec executable="rm" logoutput="true" passthru="true" checkreturn="true">
             <arg value="-rf"/>
-            <arg value="${temp}/cache"/>
+            <arg value="${temp}"/>
         </exec>
     </target>
 
