--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,12 @@
 root = true
 
+[*.neon]
+charset = utf-8
+indent_style = tab
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
+
 [*.yml]
 charset = utf-8
 end_of_line = lf
