--- a/composer.json
+++ b/composer.json
@@ -27,25 +27,35 @@
       "Wavevision\\": "tests"
     }
   },
+  "config": {
+    "platform": {
+      "php": "7.4"
+    },
+    "sort-packages": true
+  },
   "require": {
-    "php": ">=7.2",
-    "kdyby/translation": "^3.0",
+    "contributte/translation": "^0.6.0",
     "nette/application": "^3.0",
     "nette/di": "^3.0",
     "nette/neon": "^3.0",
+    "php": ">=7.4",
     "symfony/console": "^4.3",
-    "wavevision/utils": "^1.2"
+    "wavevision/utils": "^1.12"
   },
   "require-dev": {
     "jakub-onderka/php-parallel-lint": "^1.0",
-    "phing/phing": "^2.16",
-    "php-coveralls/php-coveralls": "^2.1",
-    "phpstan/phpstan": "^0.11.16",
+    "phing/phing": "3.0.0-alpha2",
+    "php-coveralls/php-coveralls": "^2.2",
+    "php-mock/php-mock-phpunit": "^2.5",
+    "phpstan/phpstan": "^0.12.3",
     "phpunit/phpunit": "^8.4",
-    "wavevision/coding-standard": "^1.1",
-    "wavevision/nette-tests": "^2.0"
+    "wavevision/coding-standard": "^2.1",
+    "wavevision/nette-tests": "^2.2"
   },
   "scripts": {
     "phing": "phing"
+  },
+  "extra": {
+    "phpstan": {}
   }
 }
