--- a/src/NamespaceTranslator/DI/config.neon
+++ b/src/NamespaceTranslator/DI/config.neon
@@ -1,9 +1,6 @@
 services:
 	domainManager: Wavevision\NamespaceTranslator\DomainManager
-	exportManager: Wavevision\NamespaceTranslator\Export\ExportManager
-	exportTranslations: Wavevision\NamespaceTranslator\Export\ExportTranslations
-	importManager: Wavevision\NamespaceTranslator\Import\ImportManager
-	importTranslations: Wavevision\NamespaceTranslator\Import\ImportTranslations
-	parametersManager: Wavevision\NamespaceTranslator\ParametersManager(%exclude%, %exportDir%, %rootDirs%, %rootNamespace%)
+	parametersManager: Wavevision\NamespaceTranslator\ParametersManager(%exclude%, %loaders%, %rootDirs%, %rootNamespace%, %translationDirNames%)
+	resourceLoader: Wavevision\NamespaceTranslator\ResourceLoader
 	resourceManager:  Wavevision\NamespaceTranslator\ResourceManager
 	translatorFactory: Wavevision\NamespaceTranslator\TranslatorFactory
