--- a/tests/NamespaceTranslatorTests/App/config.neon
+++ b/tests/NamespaceTranslatorTests/App/config.neon
@@ -24,6 +24,5 @@ services:
 	router: Wavevision\NamespaceTranslatorTests\App\Router\RouterFactory::createRouter
 	- Wavevision\NamespaceTranslatorTests\App\Components\OtherComponent\OtherComponentFactory
 	- Wavevision\NamespaceTranslatorTests\App\Components\SomeComponent\SomeComponentFactory
-	-
-		factory: Wavevision\NamespaceTranslatorTests\App\Models\Translated\Model
-		inject: on
+	- factory: Wavevision\NamespaceTranslatorTests\App\Models\Translated\Model
+	  inject: on
