--- a/tests/NamespaceTranslatorTests/App/Presenters/translations/cs.neon
+++ b/tests/NamespaceTranslatorTests/App/Presenters/translations/cs.neon
@@ -1,2 +1,2 @@
-# Translations available in every App\Presenter
+# Translations available in every App\Presenters presenter
 message: "App\\Presenters."
