--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,11 @@
     "nette/application": "^3.0",
     "nette/di": "^3.0",
     "nette/neon": "^3.0",
+    "wavevision/di-service-annotation": "^4.0",
     "wavevision/utils": "^2.1"
   },
   "require-dev": {
     "jakub-onderka/php-parallel-lint": "^1.0",
-    "phing/phing": "3.0.0-alpha2",
     "php-coveralls/php-coveralls": "^2.2",
     "php-mock/php-mock-phpunit": "^2.5",
     "phpstan/phpstan": "^0.12.3",
