--- a/tests/NamespaceTranslatorTests/App/translations/app.cs.neon
+++ b/tests/NamespaceTranslatorTests/App/translations/app.cs.neon
@@ -1,3 +1,5 @@
 # Root translations, also handled by contributte/translation
 someText: "Some text"
 messageWithCount: "Celkem %count% kusů"
+nested1:
+	nested2: "42"
