--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
   },
   "require-dev": {
     "jakub-onderka/php-parallel-lint": "^1.0",
+    "mikey179/vfsstream": "^1.6",
     "php-coveralls/php-coveralls": "^2.2",
     "php-mock/php-mock-phpunit": "^2.5",
     "phpstan/phpstan": "^0.12.3",
