--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "nette/application": "^3.0",
     "nette/di": "^3.0",
     "nette/neon": "^3.0",
-    "nette/php-generator": "^3.4",
+    "nikic/php-parser": "^4.9",
     "wavevision/di-service-annotation": "^4.0",
     "wavevision/utils": "^2.1"
   },
