--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
   },
   "require": {
     "php": ">=7.4",
+    "contributte/console": "^0.8.0",
     "contributte/translation": "^0.6.0",
     "google/apiclient": "^2.7",
     "nette/application": "^3.0",
