--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     "contributte/console": "^0.9",
     "contributte/translation": "^0.8",
     "google/apiclient": "^2.7",
-    "nette/application": "3.0.8",
+    "nette/application": "^3.1",
     "nette/di": "^3.0",
     "nette/neon": "^3.0",
     "nikic/php-parser": "^4.9",
@@ -48,8 +48,8 @@
   "require-dev": {
     "mikey179/vfsstream": "^1.6",
     "php-coveralls/php-coveralls": "^2.2",
-    "wavevision/coding-standard": "^5.2",
-    "wavevision/nette-tests": "^3.1"
+    "wavevision/coding-standard": "^6.0",
+    "wavevision/nette-tests": "3.1.3"
   },
   "extra": {
     "phpstan": {}
